feat: update sdk from v2 to v4 for query (#82)
* feat: update sdk from v2 to v4 for query